# strata

./: .gitignore  DEEP_DIVE_HUMBOLDT.md  DEEP_DIVE_KELLEY.md  DEEP_DIVE_MAURY.md  DEEP_DIVE_MITCHELL.md  DEEP_DIVE_SMITH.md  DEEP_DIVE_THOREAU.md  LAST_SESSION.md  NEXT_SESSION.md  README.md  TEST_PLAN.md  WALKTHROUGH.md  historical-docs-humboldt.html  historical-docs-kelley.html  historical-docs-maury.html  historical-docs-mitchell.html  historical-docs-smith.html  historical-docs-thoreau.html  historical-docs.html  historical_artifacts.html  pyproject.toml  strata.html
docs/: ARCHITECTURE.md  BRANDING.md  CLI.md  TUI.md  YAML_SCHEMA.md  vt-geodata-feature-gap.md
examples/: champlain.strata.yaml  hawaii_islands.strata.yaml  lake_champlain_12x24.strata.yaml  lake_champlain_plotter.strata.yaml  lake_champlain_quebec_12x24.strata.yaml  niagara_falls.strata.yaml  simple_test.strata.yaml  vermont_12x18.strata.yaml  vermont_plotter.strata.yaml  vermont_regional_12x18.strata.yaml  vermont_regional_master.strata.yaml  vt_fishing_access_12x24.strata.yaml
examples/data/: fishing_access_vt.geojson
historical-assets/: README.md
src/strata/: __init__.py  cli.py
src/strata/humboldt/: __init__.py  geometry.py  projection.py
src/strata/kelley/: __init__.py  svg.py
src/strata/maury/: __init__.py  pipeline.py  recipe.py
src/strata/thoreau/: __init__.py  cache.py  canada.py  census.py  quebec.py
src/strata/tui/: __init__.py  app.py  catalog.py  debug.py
src/strata/tui/screens/: __init__.py  bounds.py  layer_config.py  output_config.py  source_browser.py  welcome.py
tests/: test_recipe.py
